feature: add user manager api
