# src/models/requests/User.js
@@ -4,26 +4,26 @@ import { STATUS } from '@/config/constants';
 const obj = {
   email: Joi.string().trim().min(4).max(50).required().email(),
   password: Joi.string().trim().min(4).max(50).required(),
+  userName: Joi.string().trim().min(3).max(20).required(),
+  fullName: Joi.string().trim().max(225).required(),
+  birthday: Joi.date(),
+  avatar: Joi.string(),
+  gender: Joi.number().allow(null).integer(),
+  phone: Joi.string().trim().max(12),
+  address: Joi.string().trim(),
+  status: Joi.number().integer().valid(STATUS.DISABLE, STATUS.ENABLE),
 };
 
-export const registerRequest = (data) => {
+export const storeRequest = (data) => {
   const rule = Joi.object({
     ...obj,
-    userName: Joi.string().trim().min(3).max(20).required(),
-    fullName: Joi.string().trim().max(225).required(),
-    birthday: Joi.date().allow(null, ''),
-    avatar: Joi.string().allow(null, ''),
-    gender: Joi.number().allow(null).integer(),
-    phone: Joi.string().trim().max(12).allow(null, ''),
-    address: Joi.string().trim().allow(null, ''),
-    status: Joi.number().integer().valid(STATUS.DISABLE, STATUS.ENABLE),
   });
 
   return rule.validate(data);
 };
 
-export const loginRequest = (data) => {
-  const rule = Joi.object(obj);
+export const updateRequest = (data) => {
+  const rule = Joi.object({ ...obj, password: Joi.string().trim().min(4).max(50) });
 
   return rule.validate(data);
 };
